data/derived/comb/progs/unify/prog0465.ml.out
Characters 144-152:
  if (randNum = 1 && randNum2 = 3) then buildX() else
                                        ^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit
